v0.0.1/modules/schema/pages/class/Instructions.adoc
= `Instructions`
:toclevels: 4


+++Provides the necessary information (on a resource basis) to capture the Startup/Shutdown instruction results. This information is relevant to the DA Market (RUC only) as well as the RT Market (HASP, Pre-dispatch, and Interval).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Instructions`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* *`Instructions`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Instructions {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RegisteredResource {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AggregateNode {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



InstructionClearing {
  style {
    fill: "#fffbef"
    shadow: true
  }
}




Instructions -> RegisteredResource: RegisteredResource


Instructions -> AggregateNode: AggregateNode


Instructions -> InstructionClearing: InstructionClearing


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<RegisteredResource,`RegisteredResource`>>
| 1
| xref::class/RegisteredResource.adoc[`RegisteredResource`]
| n/a

| <<InstructionClearing,`InstructionClearing`>>
| 1..*
| xref::class/InstructionClearing.adoc[`InstructionClearing`]
| n/a

| <<AggregateNode,`AggregateNode`>>
| 0..1
| xref::class/AggregateNode.adoc[`AggregateNode`]
| n/a

| <<bindingDOD,`bindingDOD`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Binding dispatch operating delta provides a relative delta to be applied. Typically used in demand response instructions. The binding<font color="#0f0f0f">DOD instructions are cumulative; in other words a second DOD instruction does not replace the previous DOD, instead the second DOD adds to the previous DODs.</font>+++

| <<bindingDOT,`bindingDOT`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| n/a

| <<bindingInstruction,`bindingInstruction`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| n/a

| <<instructionCost,`instructionCost`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Total cost associated with changing the status of the resource.+++

| <<instructionSource,`instructionSource`>>
| 0..1
| xref::enumeration/MQSInstructionSource.adoc[`MQSInstructionSource`]
| +++instruction source for market quality results (INS, ACT)+++

| <<instructionStartTime,`instructionStartTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Time the resource should be at Pmin (for start ups).

Time the resource is off line.+++

| <<instructionType,`instructionType`>>
| 0..1
| xref::enumeration/AutomaticDispInstTypeCommitment.adoc[`AutomaticDispInstTypeCommitment`]
| +++Indicator of either a Start-Up or a Shut-Down.+++

| <<manuallyBlocked,`manuallyBlocked`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Manually Blocked Indicator (Yes/No). The instruction has been blocked by an Operator.+++

| <<minStatusChangeTime,`minStatusChangeTime`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Minimum start up time required to bring the unit online (minutes).

SCUC commitment period start-up time. Calculated start up time based on the StartUpTimeCurve provided with the Bid.

This is a combination of StartUp time bid and Unit down time. 

Units is minutes+++

| <<updateTimeStamp,`updateTimeStamp`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<updateType,`updateType`>>
| 0..1
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]
| n/a

| <<updateUser,`updateUser`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a
|===

'''


//[discrete]
[#AggregateNode]
=== `AggregateNode`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.AggregateNode`
| Cardinality
| 0..1
| Type
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#bindingDOD]
=== `bindingDOD`
+++Binding dispatch operating delta provides a relative delta to be applied. Typically used in demand response instructions. The binding<font color="#0f0f0f">DOD instructions are cumulative; in other words a second DOD instruction does not replace the previous DOD, instead the second DOD adds to the previous DODs.</font>+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.bindingDOD`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bindingDOT]
=== `bindingDOT`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.bindingDOT`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bindingInstruction]
=== `bindingInstruction`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.bindingInstruction`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#InstructionClearing]
=== `InstructionClearing`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.InstructionClearing`
| Cardinality
| 1..*
| Type
| xref::class/InstructionClearing.adoc[`InstructionClearing`]


|===

//[discrete]
[#instructionCost]
=== `instructionCost`
+++Total cost associated with changing the status of the resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.instructionCost`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#instructionSource]
=== `instructionSource`
+++instruction source for market quality results (INS, ACT)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.instructionSource`
| Cardinality
| 0..1
| Type
| xref::enumeration/MQSInstructionSource.adoc[`MQSInstructionSource`]


|===

//[discrete]
[#instructionStartTime]
=== `instructionStartTime`
+++Time the resource should be at Pmin (for start ups).

Time the resource is off line.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.instructionStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#instructionType]
=== `instructionType`
+++Indicator of either a Start-Up or a Shut-Down.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.instructionType`
| Cardinality
| 0..1
| Type
| xref::enumeration/AutomaticDispInstTypeCommitment.adoc[`AutomaticDispInstTypeCommitment`]


|===

//[discrete]
[#manuallyBlocked]
=== `manuallyBlocked`
+++Manually Blocked Indicator (Yes/No). The instruction has been blocked by an Operator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.manuallyBlocked`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#minStatusChangeTime]
=== `minStatusChangeTime`
+++Minimum start up time required to bring the unit online (minutes).

SCUC commitment period start-up time. Calculated start up time based on the StartUpTimeCurve provided with the Bid.

This is a combination of StartUp time bid and Unit down time. 

Units is minutes+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.minStatusChangeTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#RegisteredResource]
=== `RegisteredResource`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.RegisteredResource`
| Cardinality
| 1
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

//[discrete]
[#updateTimeStamp]
=== `updateTimeStamp`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.updateTimeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#updateType]
=== `updateType`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.updateType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]


|===

//[discrete]
[#updateUser]
=== `updateUser`


[cols="h,4",width=65%]
|===
| URI
| `cim:Instructions.updateUser`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


